2006-10-08  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* doctools.test: Rewritten to use new features for handling the
	* docidx.test:   environment.
	* doctoc.test:

2006-10-03  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.9 ========================
	* 

2006-10-02  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* doctools.test: Made the testsuite robust against locale
	* doctoc.test:   settings in the environment. The tests
	* docidx.test:   assume the default locale (LANG=C).

2006-09-19  Andreas Kupries  <andreask@activestate.com>

	* doctools.man: Bumped version to 1.2.1
	* doctools.tcl: 
	* pkgIndex.tcl:

2006-08-10  Andreas Kupries <andreask@activestate.com>

	* mpformats/_text.tcl: Replaced textutil with the exact packages
	* mpformats/fmt.text:  needed, and adjusted all callers to use the
	  long command names.

2006-06-16  Andreas Kupries <andreask@activestate.com>

	* ../../apps/dtplite: Still found a xref link bug in the -merge
	  code path. The per-module toc had the wrong links. Added code to
	  generate and set a proper file mapping for these tocs. Removed
	  MapLink and switched to the new command "fileutil::relativeUrl".

2006-03-13  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* mpformats/_nroff.tcl: Do not double-quote (sub)section titles if
	  they do not contain whitespaces.

2006-01-28  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* doctools.test: Fixed use of duplicate test names

2006-01-22  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* docidx.test: More boilerplate simplified via use of test support.
	* doctoc.test:
	* doctools.test:

2006-01-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* docidx.test: Hooked into the new common test support code.
	* doctoc.test:
	* doctools.test:

2005-10-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*