@@ -8,7 +8,7 @@
 # Copyright (c) 2003 by Andreas Kupries <andreas_kupries@users.sourceforge.net>
 # All rights reserved.
 #
-# RCS: @(#) $Id: doctoc.test,v 1.12 2006/10/09 15:23:06 andreas_kupries Exp $
+# RCS: @(#) $Id: doctoc.test,v 1.13 2006/10/25 16:24:10 andreas_kupries Exp $
 
 # -------------------------------------------------------------------------
 
@@ -30,6 +30,7 @@ testing {
 
 array_unset env LANG*
 array_unset env LC_*
+set env(LANG) C ; # Usually default if nothing is set, OS X requires this.
 
 # -------------------------------------------------------------------------
 
